--- a/q/211925.html
+++ b/q/211925.html
@@ -26,24 +26,30 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>043</td><td>Wolfram Language Mathematica</td><td>201002T080139Z</td><td><a href="https://codegolf.stackexchange.com/questions/211925/palindrome-distance/211930#211930">att</a></td></tr>
-<tr d-ix="1"><td>053</td><td>JavaScript Node.js</td><td>240709T075924Z</td><td><a href="https://codegolf.stackexchange.com/questions/211925/palindrome-distance/274037#274037">l4m2</a></td></tr>
-<tr d-ix="2"><td>053</td><td>TECO</td><td>201007T233458Z</td><td><a href="https://codegolf.stackexchange.com/questions/211925/palindrome-distance/212163#212163">Gunter L</a></td></tr>
-<tr d-ix="3"><td>011</td><td>Husk</td><td>201003T134650Z</td><td><a href="https://codegolf.stackexchange.com/questions/211925/palindrome-distance/211988#211988">Jo King</a></td></tr>
-<tr d-ix="4"><td>024</td><td>J</td><td>201003T161904Z</td><td><a href="https://codegolf.stackexchange.com/questions/211925/palindrome-distance/211990#211990">Jonah</a></td></tr>
-<tr d-ix="5"><td>050</td><td>Haskell</td><td>201002T115020Z</td><td><a href="https://codegolf.stackexchange.com/questions/211925/palindrome-distance/211943#211943">Wheat Wi</a></td></tr>
-<tr d-ix="6"><td>047</td><td>R</td><td>201002T101942Z</td><td><a href="https://codegolf.stackexchange.com/questions/211925/palindrome-distance/211937#211937">Dominic </a></td></tr>
-<tr d-ix="7"><td>007</td><td>Jelly</td><td>201002T193751Z</td><td><a href="https://codegolf.stackexchange.com/questions/211925/palindrome-distance/211962#211962">Jonathan</a></td></tr>
-<tr d-ix="8"><td>051</td><td>C gcc</td><td>201002T115747Z</td><td><a href="https://codegolf.stackexchange.com/questions/211925/palindrome-distance/211944#211944">Noodle9</a></td></tr>
-<tr d-ix="9"><td>052</td><td>C gcc</td><td>201002T121928Z</td><td><a href="https://codegolf.stackexchange.com/questions/211925/palindrome-distance/211945#211945">AZTECCO</a></td></tr>
-<tr d-ix="10"><td>021</td><td>APL Dyalog Unicode</td><td>201002T155410Z</td><td><a href="https://codegolf.stackexchange.com/questions/211925/palindrome-distance/211954#211954">Razetime</a></td></tr>
-<tr d-ix="11"><td>022</td><td>Charcoal</td><td>201002T113529Z</td><td><a href="https://codegolf.stackexchange.com/questions/211925/palindrome-distance/211942#211942">Neil</a></td></tr>
-<tr d-ix="12"><td>054</td><td>Python 2</td><td>201002T111054Z</td><td><a href="https://codegolf.stackexchange.com/questions/211925/palindrome-distance/211939#211939">ovs</a></td></tr>
-<tr d-ix="13"><td>059</td><td>Python 3</td><td>201002T112231Z</td><td><a href="https://codegolf.stackexchange.com/questions/211925/palindrome-distance/211941#211941">Noodle9</a></td></tr>
-<tr d-ix="14"><td>057</td><td>JavaScript ES6</td><td>201002T065645Z</td><td><a href="https://codegolf.stackexchange.com/questions/211925/palindrome-distance/211928#211928">Arnauld</a></td></tr>
-<tr d-ix="15"><td>008</td><td>05AB1E</td><td>201002T064949Z</td><td><a href="https://codegolf.stackexchange.com/questions/211925/palindrome-distance/211927#211927">ovs</a></td></tr>
+<tr d-ix="0"><td>006</td><td>Japt mx</td><td>240711T170449Z</td><td><a href="https://codegolf.stackexchange.com/questions/211925/palindrome-distance/274089#274089">Shaggy</a></td></tr>
+<tr d-ix="1"><td>043</td><td>Wolfram Language Mathematica</td><td>201002T080139Z</td><td><a href="https://codegolf.stackexchange.com/questions/211925/palindrome-distance/211930#211930">att</a></td></tr>
+<tr d-ix="2"><td>053</td><td>JavaScript Node.js</td><td>240709T075924Z</td><td><a href="https://codegolf.stackexchange.com/questions/211925/palindrome-distance/274037#274037">l4m2</a></td></tr>
+<tr d-ix="3"><td>053</td><td>TECO</td><td>201007T233458Z</td><td><a href="https://codegolf.stackexchange.com/questions/211925/palindrome-distance/212163#212163">Gunter L</a></td></tr>
+<tr d-ix="4"><td>011</td><td>Husk</td><td>201003T134650Z</td><td><a href="https://codegolf.stackexchange.com/questions/211925/palindrome-distance/211988#211988">Jo King</a></td></tr>
+<tr d-ix="5"><td>024</td><td>J</td><td>201003T161904Z</td><td><a href="https://codegolf.stackexchange.com/questions/211925/palindrome-distance/211990#211990">Jonah</a></td></tr>
+<tr d-ix="6"><td>050</td><td>Haskell</td><td>201002T115020Z</td><td><a href="https://codegolf.stackexchange.com/questions/211925/palindrome-distance/211943#211943">Wheat Wi</a></td></tr>
+<tr d-ix="7"><td>047</td><td>R</td><td>201002T101942Z</td><td><a href="https://codegolf.stackexchange.com/questions/211925/palindrome-distance/211937#211937">Dominic </a></td></tr>
+<tr d-ix="8"><td>007</td><td>Jelly</td><td>201002T193751Z</td><td><a href="https://codegolf.stackexchange.com/questions/211925/palindrome-distance/211962#211962">Jonathan</a></td></tr>
+<tr d-ix="9"><td>051</td><td>C gcc</td><td>201002T115747Z</td><td><a href="https://codegolf.stackexchange.com/questions/211925/palindrome-distance/211944#211944">Noodle9</a></td></tr>
+<tr d-ix="10"><td>052</td><td>C gcc</td><td>201002T121928Z</td><td><a href="https://codegolf.stackexchange.com/questions/211925/palindrome-distance/211945#211945">AZTECCO</a></td></tr>
+<tr d-ix="11"><td>021</td><td>APL Dyalog Unicode</td><td>201002T155410Z</td><td><a href="https://codegolf.stackexchange.com/questions/211925/palindrome-distance/211954#211954">Razetime</a></td></tr>
+<tr d-ix="12"><td>022</td><td>Charcoal</td><td>201002T113529Z</td><td><a href="https://codegolf.stackexchange.com/questions/211925/palindrome-distance/211942#211942">Neil</a></td></tr>
+<tr d-ix="13"><td>054</td><td>Python 2</td><td>201002T111054Z</td><td><a href="https://codegolf.stackexchange.com/questions/211925/palindrome-distance/211939#211939">ovs</a></td></tr>
+<tr d-ix="14"><td>059</td><td>Python 3</td><td>201002T112231Z</td><td><a href="https://codegolf.stackexchange.com/questions/211925/palindrome-distance/211941#211941">Noodle9</a></td></tr>
+<tr d-ix="15"><td>057</td><td>JavaScript ES6</td><td>201002T065645Z</td><td><a href="https://codegolf.stackexchange.com/questions/211925/palindrome-distance/211928#211928">Arnauld</a></td></tr>
+<tr d-ix="16"><td>008</td><td>05AB1E</td><td>201002T064949Z</td><td><a href="https://codegolf.stackexchange.com/questions/211925/palindrome-distance/211927#211927">ovs</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, <s>53</s> <s>45</s> 43 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a> <a href="https://codegolf.meta.stackexchange.com/a/14339/"><code>-mx</code></a>, 6 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<pre><code>T±UaWo
+</code></pre>
+<p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;flags=LW14&amp;code=VLFVYVdv&amp;input=Wzc4LDEwMSwxMTgsMTAxLDExNCwxMTEsMTAwLDEwMCwxMTEsMTE0LDEwMSwxMTgsMTAxLDExMF0" rel="nofollow noreferrer">Try it</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, <s>53</s> <s>45</s> 43 bytes</h1>
 <p>Apparently left a <code>l=</code> in for no reason.</p>
 <pre><code>Sum[Abs[#[[i]]-#[[-i]]],{,Tr[1^#]/2},{i,}]&amp;
 </code></pre>
@@ -51,14 +57,14 @@
 <p>Input a list of integers.</p>
 <p><span class="math-container">$$\sum_{i=1}^{d}\left(d-i+1\right)|s_i-s_{l-i+1}|=\sum_{j=1}^{d}\sum_{i=1}^{j}|s_i-s_{l-i+1}|.$$</span></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 53 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 53 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>f=(a,n=0)=&gt;1/a?n:n+f(a,n+Math.abs(a.shift()-a.pop()))
 </code></pre>
 <p><a href="https://tio.run/##bc7BCsIwDAbgu09RPLXoMh3qQaginvUFxEPatU6pzViLrz87mTLFnEK@/CQ3fGDQzbWOmafStK2VHKdezoTczHPc@rWf2G4yOWCsAFXgCKG62shFhlBTzYUQbTQhMskCkxumyQdyBhxduOUnAAhnuGPN9UtBV9js061d7KJiNOrCfIw4FmxYec5mvSlU3zgwVPo7mWzem1ZYmiEmW/VWGefox4pPMP2XXcjZ90LCxbJHbx6mobKkJjU@bQy@Of6xoli0Tw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <p>From Arnauld's</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://en.wikipedia.org/wiki/TECO_(text_editor)" rel="nofollow noreferrer">TECO</a>, 53 Bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://en.wikipedia.org/wiki/TECO_(text_editor)" rel="nofollow noreferrer">TECO</a>, 53 Bytes</h1>
 <ol>
 <li>Q-register A has the initialisation code.</li>
 </ol>
@@ -122,7 +128,7 @@ j0uaz-1ub0uu0uwz/2&lt;0ua0a-(qba)%a&quot;L-qaua'qa%u%w$c-2%b&gt;*z=$$
 224
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/barbuz/Husk" rel="nofollow noreferrer">Husk</a>, <s>14 12</s> 11 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/barbuz/Husk" rel="nofollow noreferrer">Husk</a>, <s>14 12</s> 11 bytes</h1>
 <p><em>-2 thanks to Wheat Wizard pointing out you can take input as a list of codepoints</em></p>
 <p><em>and -1 thanks to HP.Wiz showing that ≠ does absolute difference not just inequality</em></p>
 <pre><code>ΣFoz*ŀ½Sz≠↔
@@ -138,7 +144,7 @@ j0uaz-1ub0uu0uwz/2&lt;0ua0a-(qba)%a&quot;L-qaua'qa%u%w$c-2%b&gt;*z=$$
 Σ               Finally sum the absolute values
 </code></pre>
 </div>
-<div id="pu4" class="pu"><h1><a href="http://jsoftware.com/" rel="nofollow noreferrer">J</a>, 24 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="http://jsoftware.com/" rel="nofollow noreferrer">J</a>, 24 bytes</h1>
 <pre><code>+/@(#\.@]*|@-)&amp;(,~inv)|.
 </code></pre>
 <p><a href="https://tio.run/##XY09C4MwEED3/IrDgklajfWjHQJCaKFTcehcBz@itogBQSfpX7daksEOB8d7j7v3bDFcQcwBgwNH4Mu4DK6P@20@eILsnkyk@0m41CbO59WNdGIzRcmFgdar9CyfCofZJPw1YuDp0iFUxwwqQUJ74BQhWTRqPc@hBpxleAvyLNfEN0lemOisUZFnpdQsMF0j21ZpGJ1MqUrp1qqt/t50cpS9KkvVL0tnTgWR1slWz18" rel="nofollow noreferrer" title="J – Try It Online">Try it online!</a></p>
@@ -166,7 +172,7 @@ j0uaz-1ub0uu0uwz/2&lt;0ua0a-(qba)%a&quot;L-qaua'qa%u%w$c-2%b&gt;*z=$$
 </code></pre>
 <p><a href="https://tio.run/##y/qvpKeepmBrpaCuoKNgoGAFxLp6Cs5BPm7/7fQcdK0clDUMlfVitdRqlGM0HWr1YnVr9P5rcnGl2@oppDloGKuVWgF5qckZ@SCdVgrpCuqJieqoAkmJSVARQ5iSpGSYIjOoUHJSYkoqVMwIpi4jNScnHypoYgpTmZ@Sqpuen5OGZk1eallqUX5KSn4RkJEHM8rIBCrthyr9HwA" rel="nofollow noreferrer" title="J – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, 50 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, 50 bytes</h1>
 
 <pre class="lang-hs prettyprint-override"><code>u#(a:b)|c:d&lt;-reverse b=u+(abs(c-a)+u)#d
 u#_=u
@@ -206,7 +212,7 @@ g=(0#)
 </code></pre>
 <p>And this gives us the final code.</p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://www.r-project.org/" rel="nofollow noreferrer">R</a>, <s>50</s> 47 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://www.r-project.org/" rel="nofollow noreferrer">R</a>, <s>50</s> 47 bytes</h1>
 <p><em>Edit: -3 bytes thanks to Giuseppe by using <code>%*%</code> operator to calculate inner product of vectors, rather than summing the product of elements as separate operations</em></p>
 
 <pre class="lang-r prettyprint-override"><code>abs((rev(x&lt;-scan())-x)[(y=sum(x|1)/2):1])%*%1:y
@@ -225,7 +231,7 @@ sum(                    # return the sum of...
     *1:y))              # multiplied by 1..y
 </code></pre>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 7 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu8" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 7 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>ạṚŒHṪḋJ
 </code></pre>
 <p>A monadic Link accepting a list of integers which yields an integer.</p>
@@ -240,7 +246,7 @@ sum(                    # return the sum of...
      ḋ  - dot-product                                    273 (= 1×1+0×2+16×3+16×4+32×5+0×6+...0×11)
 </code></pre>
 </div>
-<div id="pu8" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, <sup><s>74</s> <span class="math-container">\$\cdots\$</span> <s>52</s></sup> 51 bytes</h1>
+<div id="pu9" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, <sup><s>74</s> <span class="math-container">\$\cdots\$</span> <s>52</s></sup> 51 bytes</h1>
 <p>Saved <s>6</s> 7 bytes thanks to <a href="https://codegolf.stackexchange.com/users/84844/aztecco">AZTECCO</a>!!!<br />
 Saved <s>9</s> a whooping 15 bytes thanks to <a href="https://codegolf.stackexchange.com/users/95126/dominic-van-essen">Dominic van Essen</a>!!!</p>
 
@@ -249,7 +255,7 @@ Saved <s>9</s> a whooping 15 bytes thanks to <a href="https://codegolf.stackexch
 <p><a href="https://tio.run/##bVFda4MwFH3vr7gIhcQP2rp2sFm7h7HX/YEqI4mxFVJtjQxZ8be7m@hsCwua3Htybs7hXhEchOj7nGhf0aJsXB1dVax2qze1CF3GNXG15wV6r4I4TKk3EF@XUdcjG06sKAmF6wxwiSOrXWikbr70PoUYrg5jjg8OZ9wcjAubCs4yaYKjVKqySJXJ4FCp3CSl/JZ1lWVVjUFpkM9HpIusnNGX7VmKRmaD3NIH/FY@PPsQ4rHeWCAM12PJ4LAezSXtR5i0L@/4b4zMXf5kRGxJXtVAjFRRZrLFumU0hlvQxY@scvJngi5GwJ2QCDzPsv96dHOh8a2xV5aRRhPBzAE43hthl54YtkmQ8XGEqEt0UytZEk29FaW3SnQ7mB2NwjaGiWrN0IlrF98Xphno4VEfd4n41N9/LOJ@QUpOuH/TuPNyrpGUEydx5jpxINjBPAMMzUi1DxcfB3GJY5ne@6@lJHwEulnX/wI" rel="nofollow noreferrer" title="C (gcc) – Try It Online">Try it online!</a></p>
 <p>Port of my <a href="https://codegolf.stackexchange.com/a/211941/9481">Python 3 answer</a>.</p>
 </div>
-<div id="pu9" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, <s>55</s> 52 bytes</h1>
+<div id="pu10" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, <s>55</s> 52 bytes</h1>
 
 <pre class="lang-c prettyprint-override"><code>f(a,z)char*a;{z=z/2?z/2*abs(*a++-a[z-=2])+f(a,z):0;}
 </code></pre>
@@ -268,13 +274,13 @@ f(a+1,z-2)   >  recursively call with pointer moved and length decreased
 :0;}         >  else initialize r to 0
 </pre>
 </div>
-<div id="pu10" class="pu"><h1><a href="https://www.dyalog.com/" rel="nofollow noreferrer">APL (Dyalog Unicode)</a>, 21 bytes</h1>
+<div id="pu11" class="pu"><h1><a href="https://www.dyalog.com/" rel="nofollow noreferrer">APL (Dyalog Unicode)</a>, 21 bytes</h1>
 
 <pre class="lang-apl prettyprint-override"><code>{+/|⍵×⍳≢⍵}(⌈2÷⍨⍴)↓⊢-⌽
 </code></pre>
 <p><a href="https://tio.run/##SyzI0U2pTMzJT///v1pbv@ZR79bD0x/1bn7UuQjIrNV41NNhdHj7o94Vj3q3aD5qm/yoa5Huo569/9MetU141Nv3qKv5Ue8aoNyh9caP2iY@6psaHOQMJEM8PIP/pykAWaHOwQrqiYnqXAheUmISMjcxKRlFOjkpMSUVWSAjNScnX10BWUl@Sqpuen5OGopoXmpZalF@Skp@EZCRhyLlhyoFAA" rel="nofollow noreferrer" title="APL (Dyalog Unicode) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu11" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 22 bytes</h1>
+<div id="pu12" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 22 bytes</h1>
 <pre><code>ＩΣＥ∕θ²×⁻Ｌ∕θ²κ↔⁻℅ι℅§⮌θκ
 </code></pre>
 <p><a href="https://tio.run/##VYvBCsIwEER/pccV2otXT0UvgkVRf2BN1nYxTTTZBP9@DWIPDgwMzHtmwmgCOtVTZC@wxSRwyTMM@IQdF7YEr7ZZr9rmyjMlGNjnBAfyo0x/QCUetf0tBZeFfuAxWvbogOu17F723tIbzlQopqp/1SUbVRMsdWNwd@2K@wA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Takes input as a string (halving a string is golfier than halving an array). Explanation:</p>
@@ -320,7 +326,7 @@ f(a+1,z-2)   >  recursively call with pointer moved and length decreased
                         Implicitly print
 </code></pre>
 </div>
-<div id="pu12" class="pu"><h1><a href="https://docs.python.org/2/" rel="nofollow noreferrer">Python 2</a>, <s>57</s> 54 bytes</h1>
+<div id="pu13" class="pu"><h1><a href="https://docs.python.org/2/" rel="nofollow noreferrer">Python 2</a>, <s>57</s> 54 bytes</h1>
 <p>A recursive function that takes input as a list of integers.</p>
 
 <pre class="lang-python prettyprint-override"><code>f=lambda l:l&gt;[]and len(l)/2*abs(l[0]-l[-1])+f(l[1:-1])
@@ -335,13 +341,13 @@ f(a+1,z-2)   >  recursively call with pointer moved and length decreased
 </code></pre>
 <p><a href="https://tio.run/##VY1LCsJAEET3nqJ3M61J/OAqEI/gBdRFzycqdKaHSRBEPHvMRBBc9atXDRWfw03Cbmyb88jUGUfAtX8Qa/ZBM653S7X6IZlecxUl6g2WX0BUOLaSoId7AEWkClCGTD5k7BytIecz3DyzzEacL6/CbQ7BP3wS5yRNELI5/pt6AWAjNHCS5LRFyHs27/WXqYrpHgatXvVhu39DeYDXW1XTS0eD7gtotY2IOH4A" rel="nofollow noreferrer" title="Python 2 – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu13" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 59 bytes</h1>
+<div id="pu14" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 59 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>f=lambda l:len(l)&gt;1and len(l)//2*abs(l.pop(0)-l.pop())+f(l)
 </code></pre>
 <p><a href="https://tio.run/##XY9LbsMgFEXnXsWTJ0BrNzFxGymSs4RuIM2ArxOJggWkUmV57S4mldWU0X3nXPFg@I4XZ3fzrDvDPrlkYA5GWWzIsWFWwj1vNvSJ8YDNy@AGvCX1PRDyrJOdowoxQAe4gHRwyVhZwZZUvyNn/GFmXCyFZgWCM6kSeVvJRRnjEqF/Sk6qundGJ9y@rtiqL@WdlM6nYB/2vP9XlLZJksIvb0UfN7pvBaogp2aHSKGdh1ApuFrIfzrkm2Kqn5yXWBBYGmLx4Zxdn5zGkeRh8FcbsUblGKYS6iOM/QSjP/Vdp84TIvMP" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu14" class="pu"><h1>JavaScript (ES6), <s> 61 </s> 57 bytes</h1>
+<div id="pu15" class="pu"><h1>JavaScript (ES6), <s> 61 </s> 57 bytes</h1>
 <p>Expects a list of ASCII codes.</p>
 
 <pre class="lang-javascript prettyprint-override"><code>f=a=&gt;1/a?0:(a.length&gt;&gt;1)*Math.abs(a.shift()-a.pop())+f(a)
@@ -357,7 +363,7 @@ f(a+1,z-2)   >  recursively call with pointer moved and length decreased
 </li>
 </ul>
 </div>
-<div id="pu15" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E" rel="nofollow noreferrer">05AB1E</a>, 8 bytes</h1>
+<div id="pu16" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E" rel="nofollow noreferrer">05AB1E</a>, 8 bytes</h1>
 <p>-1 byte thanks to <a href="https://codegolf.stackexchange.com/users/52210/kevin-cruijssen">Kevin Cruijssen</a> for reminding me that input can be taken as lists of integers.</p>
 <pre><code>Âα2äθā*O
 </code></pre>
