--- a/q/274051.html
+++ b/q/274051.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>177</td><td>JavaScript ES6</td><td>240710T124848Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274057#274057">Arnauld</a></td></tr>
+<tr d-ix="0"><td>176</td><td>JavaScript ES6</td><td>240710T124848Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274057#274057">Arnauld</a></td></tr>
 <tr d-ix="1"><td>079</td><td>K ngn/k</td><td>240710T125605Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274058#274058">ovs</a></td></tr>
 <tr d-ix="2"><td>189</td><td>Python 3.8 prerelease</td><td>240710T191252Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274062#274062">squarero</a></td></tr>
 <tr d-ix="3"><td>318</td><td>Regenerate</td><td>240711T000011Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274068#274068">DLosc</a></td></tr>
@@ -34,42 +34,42 @@
 <tr d-ix="5"><td>572</td><td>sed 4.2.2</td><td>240710T061928Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274053#274053">guest430</a></td></tr>
 <tr d-ix="6"><td>041</td><td>Charcoal</td><td>240710T073253Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274054#274054">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>JavaScript (ES6), 177 bytes</h1>
+<div id="pu0" class="pu"><h1>JavaScript (ES6), 176 bytes</h1>
 <p>Builds the output character by character.</p>
 <pre class="lang-javascript prettyprint-override"><code>n=&gt;(y=h=n*6-2,n+=n-1,g=x=&gt;y?`| /\\
-`[X=w-x-n,s=y&gt;h/2||-1,c=x-n&gt;4&amp;X&gt;4,~x?x--&lt;n|X&lt;0|y&gt;4&amp;y&lt;h-3&amp;c||`0312213${y/h|y==4*c}0101`[y%3*4|X-y%3*~-s&amp;3]:(n-=y--%3&amp;&amp;s,x=w,4)]+g(x):&quot;&quot;)(w=n*4)
+`[X=w-x-n,s=y&gt;h/2,c=x-n&gt;4&amp;X&gt;4,~x?x--&lt;n|X&lt;0|y&gt;4&amp;y&lt;h-3&amp;c||`03123${y/h|y==4*c}210101`[y%3*4|X-y%3*s*2&amp;3]:(n+=y--%3&amp;&amp;-s|1,x=w,4)]+g(x):&quot;&quot;)(w=n*4)
 </code></pre>
-<p><a href="https://tio.run/##XY7LboMwEEX3@QoLNcgGT3nY7SJhyG8gJZGIKI9WaKhCVGzFya9Td9vVkc49i/t1@bnMzfXz@wY0fbRrhythyS0OSNE75JJiJMhkjwZLe6gdS06nTX2scAEDJGe05ZDkzvmmQW9KHVallk9zMAAFuapInfXSFgOosHGuTlWW55l6udtkcBZRR80jzdKsPtqtirSr4I9PmEN13nECtABbFYazNLhILc5xz43YBYHgiz@pxdpNVz62N0YMWb73KJC9ecaxYPcNY81E8zS2r@PU84AwYDEjsf83dJyEl4/1Fw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##XY7NboMwEITveQoLNcgGbwHb7SFhyWsgJZGICD@t0FKFqGDF6atT91rN4dPMHGY@L9@Xqb59fN2BxmuztrgSFtxijxS9g5IUI0EmO1ywsIfKseR02lTHEmdYgOSEtugTJWv0rjBhWRj5sxwWgJxcmafO@tDmPeiwdq5Kdab0y8MmvbOIJqqfKku9qqPd6si4Ev44RSrU5x332xZgq8MQJpfJBWdpxDnu@CJ2QSD47D8asbbjjQ/NnRFDpvYeObI3zzgW7LFhrB5pGofmdRg7HhAGLGYk9v@KlpPw4XP9BQ" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <h3>Variables</h3>
 <p>Below are the most important variables used in the code:</p>
 <ul>
 <li><span class="math-container">\$x\$</span> : current column, initialized to the width <span class="math-container">\$w=8n-4\$</span></li>
 <li><span class="math-container">\$y\$</span> : current row, initialized to the height <span class="math-container">\$h=6n-2\$</span></li>
 <li><span class="math-container">\$y \bmod 3\$</span> : cube row (1 = top, 0 = middle, 2 = bottom)</li>
-<li><span class="math-container">\$s\$</span> : sign (1 = top half / -1 = bottom half)</li>
+<li><span class="math-container">\$s\$</span> : side (1 = top half / 0 = bottom half)</li>
 <li><span class="math-container">\$p\$</span> : left/right padding, initialized to <span class="math-container">\$2n-1\$</span> (the name <span class="math-container">\$p\$</span> is used here for clarity; in the code, we actually re-use the input variable <span class="math-container">\$n\$</span>)</li>
 <li><span class="math-container">\$c\$</span> : a flag set when we are located in the center part</li>
 </ul>
 <p>For <span class="math-container">\$n=3\$</span>, this leads to the following diagram:</p>
 <pre><code>x=20                 x=-1
- |                    |  |  y | y%3 |  s | p
--v--------------------v--+----+-----+----+---
- ...../.\./.\./.\.....\n | 16 |  1  |  1 | 5
- ....|\./|\./|\./|....\n | 15 |  0  |  1 | 4
- ....|.|.|.|.|.|.|....\n | 14 |  2  |  1 | 4
- .../.\|/.\|/.\|/.\...\n | 13 |  1  |  1 | 3
- ..|\./|ccccccc|\./|..\n | 12 |  0  |  1 | 2
- ..|.|.|ccccccc|.|.|..\n | 11 |  2  |  1 | 2
- ./.\|/ccccccccc\|/.\.\n | 10 |  1  |  1 | 1
- |\./|ccccccccccc|\./|\n |  9 |  0  |  1 | 0
- |.|.|ccccccccccc|.|.|\n |  8 |  2  | -1 | 0
- .\|/.\ccccccccc/.\|/.\n |  7 |  1  | -1 | 1
- ..|\./|ccccccc|\./|..\n |  6 |  0  | -1 | 2
- ..|.|.|ccccccc|.|.|..\n |  5 |  2  | -1 | 2
- ...\|/.\./.\./.\|/...\n |  4 |  1  | -1 | 3
- ....|\./|\./|\./|....\n |  3 |  0  | -1 | 4
- ....|.|.|.|.|.|.|....\n |  2 |  2  | -1 | 4
- .....\|/.\|/.\|/.....\n |  1 |  1  | -1 | 5
+ |                    |  |  y | y%3 | s | p
+-v--------------------v--+----+-----+---+---
+ ...../.\./.\./.\.....\n | 16 |  1  | 1 | 5
+ ....|\./|\./|\./|....\n | 15 |  0  | 1 | 4
+ ....|.|.|.|.|.|.|....\n | 14 |  2  | 1 | 4
+ .../.\|/.\|/.\|/.\...\n | 13 |  1  | 1 | 3
+ ..|\./|ccccccc|\./|..\n | 12 |  0  | 1 | 2
+ ..|.|.|ccccccc|.|.|..\n | 11 |  2  | 1 | 2
+ ./.\|/ccccccccc\|/.\.\n | 10 |  1  | 1 | 1
+ |\./|ccccccccccc|\./|\n |  9 |  0  | 1 | 0
+ |.|.|ccccccccccc|.|.|\n |  8 |  2  | 0 | 0
+ .\|/.\ccccccccc/.\|/.\n |  7 |  1  | 0 | 1
+ ..|\./|ccccccc|\./|..\n |  6 |  0  | 0 | 2
+ ..|.|.|ccccccc|.|.|..\n |  5 |  2  | 0 | 2
+ ...\|/.\./.\./.\|/...\n |  4 |  1  | 0 | 3
+ ....|\./|\./|\./|....\n |  3 |  0  | 0 | 4
+ ....|.|.|.|.|.|.|....\n |  2 |  2  | 0 | 4
+ .....\|/.\|/.\|/.....\n |  1 |  1  | 0 | 5
 </code></pre>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 79 bytes</h1>
