--- a/q/274087.html
+++ b/q/274087.html
@@ -26,12 +26,12 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>080</td><td>Python</td><td>240711T190654Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274093#274093">Albert.L</a></td></tr>
+<tr d-ix="0"><td>082</td><td>Python</td><td>240711T190654Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274093#274093">Albert.L</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 80 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 82 bytes</h1>
 <pre class="lang-python prettyprint-override"><code>from turtle import*
 def f(n,d):
- for j in range(n*8):left(45/n);forward((j&amp;4)*d)
+ for j in range(n*8):left(45/n);forward((j&amp;4)*d/n)
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m72soLIkIz9vwYKlpSVpuhY3A9KK8nMVSkqLSnJSFTJzC_KLSrS4UlLTFNI08nRSNK24FNLyixSyFDLzFIoS89JTNfK0LDStclLTSjRMTPXzNK2B0uWJRSkaGllqJppaKZoQc6HGw6wBAA" rel="nofollow noreferrer">ATO Does not work for this (missing <code>_tkinter</code>)!</a></p>
 <p>Interpretation of units is arguably a tad opportunistic.</p>
