--- a/q/274087.html
+++ b/q/274087.html
@@ -26,9 +26,18 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>082</td><td>Python</td><td>240711T190654Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274093#274093">Albert.L</a></td></tr>
+<tr d-ix="0"><td>054</td><td>Wolfram Language Mathematica</td><td>240711T192306Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274094#274094">Sanguine</a></td></tr>
+<tr d-ix="1"><td>082</td><td>Python</td><td>240711T190654Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274093#274093">Albert.L</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 82 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 54 bytes</h1>
+<pre><code>Graphics[ResourceFunction[&quot;ReuleauxPolygon&quot;][Input[]]]
+</code></pre>
+<p>Of course Wolfram has a way to do this.</p>
+<hr />
+<p>Example with input <code>5</code>:</p>
+<p><a href="https://i.sstatic.net/JpjB3692m.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/JpjB3692m.png" alt="enter image description here" /></a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 82 bytes</h1>
 <pre class="lang-python prettyprint-override"><code>from turtle import*
 def f(n,d):
  for j in range(n*8):left(45/n);forward((j&amp;4)*d/n)
