--- a/q/274087.html
+++ b/q/274087.html
@@ -35,7 +35,7 @@
 <p>Of course Wolfram has a way to do this. First input is arc radius, and second is <span class="math-container">\$n\$</span> number of sides.</p>
 <hr />
 <p>Example with input <code>100</code>, <code>5</code>:</p>
-<p><a href="https://i.sstatic.net/JpjB3692m.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/JpjB3692m.png" alt="enter image description here" /></a></p>
+<p><a href="https://i.sstatic.net/yk8VvMK0m.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/yk8VvMK0m.png" alt="enter image description here" /></a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 82 bytes</h1>
 <pre class="lang-python prettyprint-override"><code>from turtle import*
