--- a/q/274092.html
+++ b/q/274092.html
@@ -26,9 +26,16 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>003</td><td>Jelly</td><td>240711T193202Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274095#274095">Fmbalbue</a></td></tr>
+<tr d-ix="0"><td>007</td><td>APL+WIN</td><td>240711T200539Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274096#274096">Graham</a></td></tr>
+<tr d-ix="1"><td>003</td><td>Jelly</td><td>240711T193202Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274095#274095">Fmbalbue</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 3 bytes</h1>
+<div id="pu0" class="pu"><h1>APL+WIN, 7 bytes</h1>
+<p>Prompts for vector of numbers.</p>
+<pre><code>+/i*i←⎕
+</code></pre>
+<p><a href="https://tio.run/##SyzI0U2pTMzJT9dNzkksLs5M/v@ob6qvz6O2CcZcQJanP5BlyPWooz3tv7Z@plYmkAsU/g8U4PqfxmWiYKZgDgA" rel="nofollow noreferrer" title="APL (Dyalog Classic) – Try It Online">Try it online! Thanks to Dyalog Classic</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 3 bytes</h1>
 <pre><code>*`S
 </code></pre>
 <p><a href="https://tio.run/##y0rNyan8/18rIfj////RJjpmOuaxAA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
