--- a/q/274087.html
+++ b/q/274087.html
@@ -26,10 +26,27 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>082</td><td>Python</td><td>240711T190654Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274093#274093">Albert.L</a></td></tr>
-<tr d-ix="1"><td>062</td><td>Wolfram Language Mathematica</td><td>240711T192306Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274094#274094">Sanguine</a></td></tr>
+<tr d-ix="0"><td>152</td><td>Ruby</td><td>240711T210954Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274100#274100">Level Ri</a></td></tr>
+<tr d-ix="1"><td>082</td><td>Python</td><td>240711T190654Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274093#274093">Albert.L</a></td></tr>
+<tr d-ix="2"><td>062</td><td>Wolfram Language Mathematica</td><td>240711T192306Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274094#274094">Sanguine</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 82 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 152 bytes</h1>
+
+<pre class="lang-ruby prettyprint-override"><code>-&gt;n{s='&lt;svg viewBox=&quot;-50-50 99 99&quot;&gt;&lt;path d=&quot;M40 0'
+n.times{|j|x,y=(40*1i**(4.0/n*~j)).rect
+s&lt;&lt;&quot;A#{r=40/(1i**(1r/n)).imag} #{r} 0 0,0 #{x} #{y}&quot;}
+s+'&quot;&gt;'}
+</code></pre>
+<p><a href="https://tio.run/##HYxLDoIwAET3nKKpi0LlU2NdkLQkuvcExgUqYEmopC0IgXr1Wk3eYiZvMmq4za7mLinkojliemzAKKr36TVxmByIB@S5BxasL80TPDg8UwIICmRqRFfpZW3XKZ55SAneCYxDmpJM4k8bRamq7ibQjMHjZlGckiz8L3Yqk96Krmws8MYCfxgTH6dfny20gd4iWCDr@sFoUF/2V/cF" rel="nofollow noreferrer" title="Ruby – Try It Online">Try it online!</a></p>
+<p>Generates a string containing an SVG image such as the one below. The <code>n</code> points always fall on a circle of radius 40. The radius of curvature of the sides varies according to the value of <code>n</code>.</p>
+<p><div class="snippet" data-lang="js" data-hide="false" data-console="true" data-babel="false">
+<div class="snippet-code">
+<pre class="snippet-code-html lang-html prettyprint-override"><code>&lt;svg viewBox="-50-50 99 99"&gt;&lt;path d="M40 0A80.00000000000001 80.00000000000001 0 0,0 -19.999999999999993 -34.64101615137755A80.00000000000001 80.00000000000001 0 0,0 -20.000000000000018 34.641016151377535A80.00000000000001 80.00000000000001 0 0,0 40.0 9.797174393178826e-15"&gt;</code></pre>
+</div>
+</div>
+</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 82 bytes</h1>
 <pre class="lang-python prettyprint-override"><code>from turtle import*
 def f(n,d):
  for j in range(n*8):left(45/n);forward((j&amp;4)*d/n)
@@ -40,7 +57,7 @@ Nor does TIO.</p>
 <h2>How?</h2>
 <p>Observing that the arc lengths always sum to half a full circle we let the turtle draw a circle omitting every other of a total of <span class="math-container">\$2n\$</span> equal length arcs</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 62 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 62 bytes</h1>
 <pre><code>Graphics[ResourceFunction[&quot;ReuleauxPolygon&quot;][Input[],Input[]]]
 </code></pre>
 <p>Of course Wolfram has a way to do this. First input is arc radius, and second is <span class="math-container">\$n\$</span> number of sides.</p>
