--- a/q/274092.html
+++ b/q/274092.html
@@ -26,13 +26,20 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>017</td><td>Haskell</td><td>240711T203506Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274099#274099">xnor</a></td></tr>
-<tr d-ix="1"><td>029</td><td>Python 3.8 prerelease</td><td>240711T202931Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274098#274098">squarero</a></td></tr>
-<tr d-ix="2"><td>042</td><td>Nibbles</td><td>240711T202550Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274097#274097">Dominic </a></td></tr>
-<tr d-ix="3"><td>007</td><td>APL+WIN</td><td>240711T200539Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274096#274096">Graham</a></td></tr>
-<tr d-ix="4"><td>003</td><td>Jelly</td><td>240711T193202Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274095#274095">Fmbalbue</a></td></tr>
+<tr d-ix="0"><td>004</td><td>Uiua</td><td>240711T220003Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274101#274101">noodle p</a></td></tr>
+<tr d-ix="1"><td>017</td><td>Haskell</td><td>240711T203506Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274099#274099">xnor</a></td></tr>
+<tr d-ix="2"><td>029</td><td>Python 3.8 prerelease</td><td>240711T202931Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274098#274098">squarero</a></td></tr>
+<tr d-ix="3"><td>042</td><td>Nibbles</td><td>240711T202550Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274097#274097">Dominic </a></td></tr>
+<tr d-ix="4"><td>007</td><td>APL+WIN</td><td>240711T200539Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274096#274096">Graham</a></td></tr>
+<tr d-ix="5"><td>003</td><td>Jelly</td><td>240711T193202Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274095#274095">Fmbalbue</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, 17 bytes</h1>
+<div id="pu0" class="pu"><h1>Uiua, 4 bytes</h1>
+<pre><code>/+ⁿ.
+</code></pre>
+<p><a href="https://uiua.org/pad?src=0_12_0-dev_1__RiDihpAgLyvigb8uCgpGIDRfNl83Cg==" rel="nofollow noreferrer">Try it</a></p>
+<p><sup>body must be at least 30 characters; you entered 25</sup></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, 17 bytes</h1>
 
 <pre class="lang-hs prettyprint-override"><code>sum.map((^)&lt;*&gt;id)
 </code></pre>
@@ -43,7 +50,7 @@
 </code></pre>
 <p><a href="https://tio.run/##y0gszk7Nyfn/P00hx7a4NDe6Iq6ipsJGNyf2f25iZp6CrUJBUWZeiYKKQppCtImOmY557H8A" rel="nofollow noreferrer" title="Haskell – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 29 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 29 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>lambda l:sum(x**x for x in l)
 </code></pre>
@@ -55,7 +62,7 @@
                   for x in l    # For each element in the list
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="http://golfscript.com/nibbles/index.html" rel="nofollow noreferrer">Nibbles</a>, 4 nibbles (2 bytes)</h1>
+<div id="pu3" class="pu"><h1><a href="http://golfscript.com/nibbles/index.html" rel="nofollow noreferrer">Nibbles</a>, 4 nibbles (2 bytes)</h1>
 <pre><code>+.$^
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m708LzMpKSe1eMGCpaUlaboWS7T1VOIgTKjI6milaBMdMx3zWKVYqBAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -69,13 +76,13 @@
     $    #   y is each element
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1>APL+WIN, 7 bytes</h1>
+<div id="pu4" class="pu"><h1>APL+WIN, 7 bytes</h1>
 <p>Prompts for vector of numbers.</p>
 <pre><code>+/i*i←⎕
 </code></pre>
 <p><a href="https://tio.run/##SyzI0U2pTMzJT9dNzkksLs5M/v@ob6qvz6O2CcZcQJanP5BlyPWooz3tv7Z@plYmkAsU/g8U4PqfxmWiYKZgDgA" rel="nofollow noreferrer" title="APL (Dyalog Classic) – Try It Online">Try it online! Thanks to Dyalog Classic</a></p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 3 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 3 bytes</h1>
 <pre><code>*`S
 </code></pre>
 <p><a href="https://tio.run/##y0rNyan8/18rIfj////RJjpmOuaxAA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
