--- a/q/274092.html
+++ b/q/274092.html
@@ -26,20 +26,33 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>004</td><td>Uiua</td><td>240711T220003Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274101#274101">noodle p</a></td></tr>
-<tr d-ix="1"><td>017</td><td>Haskell</td><td>240711T203506Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274099#274099">xnor</a></td></tr>
-<tr d-ix="2"><td>029</td><td>Python 3.8 prerelease</td><td>240711T202931Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274098#274098">squarero</a></td></tr>
+<tr d-ix="0"><td>026</td><td>Python 3.8 prerelease</td><td>240711T202931Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274098#274098">squarero</a></td></tr>
+<tr d-ix="1"><td>004</td><td>Uiua</td><td>240711T220003Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274101#274101">noodle p</a></td></tr>
+<tr d-ix="2"><td>017</td><td>Haskell</td><td>240711T203506Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274099#274099">xnor</a></td></tr>
 <tr d-ix="3"><td>042</td><td>Nibbles</td><td>240711T202550Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274097#274097">Dominic </a></td></tr>
 <tr d-ix="4"><td>007</td><td>APL+WIN</td><td>240711T200539Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274096#274096">Graham</a></td></tr>
 <tr d-ix="5"><td>003</td><td>Jelly</td><td>240711T193202Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274095#274095">Fmbalbue</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Uiua, 4 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s> 29 </s> 26 bytes</h1>
+<p><em>-3 bytes thanks to Albert.Lang.</em></p>
+
+<pre class="lang-python prettyprint-override"><code>lambda l:sum(map(pow,l,l))
+</code></pre>
+<p><a href="https://tio.run/##K6gsycjPM7YoKPqfZhvzPycxNyklUSHHqrg0VyM3sUCjIL9cJ0cnR1Pzf0FRZl6JRppGtImOgpmOgnksUAwA" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
+<h2>Explanation</h2>
+<pre class="lang-python prettyprint-override"><code>lambda l:                    # Anonymous lambda
+         sum(            )   # Sum of...
+             map(pow,   )    # Exponentiation of...
+                     l,l     # element ** element for each element
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1>Uiua, 4 bytes</h1>
 <pre><code>/+ⁿ.
 </code></pre>
 <p><a href="https://uiua.org/pad?src=0_12_0-dev_1__RiDihpAgLyvigb8uCgpGIDRfNl83Cg==" rel="nofollow noreferrer">Try it</a></p>
 <p><sup>body must be at least 30 characters; you entered 25</sup></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, 17 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, 17 bytes</h1>
 
 <pre class="lang-hs prettyprint-override"><code>sum.map((^)&lt;*&gt;id)
 </code></pre>
@@ -49,18 +62,6 @@
 <pre class="lang-hs prettyprint-override"><code>f l=sum[x^x|x&lt;-l]
 </code></pre>
 <p><a href="https://tio.run/##y0gszk7Nyfn/P00hx7a4NDe6Iq6ipsJGNyf2f25iZp6CrUJBUWZeiYKKQppCtImOmY557H8A" rel="nofollow noreferrer" title="Haskell – Try It Online">Try it online!</a></p>
-</div>
-<div id="pu2" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 29 bytes</h1>
-
-<pre class="lang-python prettyprint-override"><code>lambda l:sum(x**x for x in l)
-</code></pre>
-<p><a href="https://tio.run/##K6gsycjPM7YoKPqfZhvzPycxNyklUSHHqrg0V6NCS6tCIS2/SKFCITNPIUfzf0FRZl6JRppGtImOgpmOgnmspuZ/AA" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
-<h2>Explanation</h2>
-<pre class="lang-python prettyprint-override"><code>lambda l:                       # Anonymous lambda
-         sum(               )   # Sum of...
-             x**x               # Number raised to itself
-                  for x in l    # For each element in the list
-</code></pre>
 </div>
 <div id="pu3" class="pu"><h1><a href="http://golfscript.com/nibbles/index.html" rel="nofollow noreferrer">Nibbles</a>, 4 nibbles (2 bytes)</h1>
 <pre><code>+.$^
