--- a/q/274092.html
+++ b/q/274092.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>167</td><td>sed 4.2.2</td><td>240711T223447Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274102#274102">guest430</a></td></tr>
+<tr d-ix="0"><td>140</td><td>sed 4.2.2 rz</td><td>240711T223447Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274102#274102">guest430</a></td></tr>
 <tr d-ix="1"><td>026</td><td>Python 3.8 prerelease</td><td>240711T202931Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274098#274098">squarero</a></td></tr>
 <tr d-ix="2"><td>004</td><td>Uiua</td><td>240711T220003Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274101#274101">noodle p</a></td></tr>
 <tr d-ix="3"><td>017</td><td>Haskell</td><td>240711T203506Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274099#274099">xnor</a></td></tr>
@@ -34,13 +34,12 @@
 <tr d-ix="5"><td>007</td><td>APL+WIN</td><td>240711T200539Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274096#274096">Graham</a></td></tr>
 <tr d-ix="6"><td>003</td><td>Jelly</td><td>240711T193202Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274095#274095">Fmbalbue</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a>, 167 bytes</h1>
-<pre><code>s!.*!sed -r 'h;G;:a;s/.\\n./\\n/;x;s/\\n.*//;tc;:b;s/.*/\&amp;\\n\&amp;/m;T;:c;x;s/^#//;x;tb;H;x;s/\\n//3g;s/(\\n.*)\\n(.*)/\\2\\1/;T;s/\\n../\&amp;/;ta;s/\\n.*//'&lt;&lt;&lt;'&amp;'!e
-s/\n//g
+<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a> <code>-rz</code>, <s>167</s> 140 bytes</h1>
+<pre><code>s!.*!sed -r 'h;G;:r;s/.\\n./\\n/;x;s/\\n.*//;ta;:b;s/.*/\&amp;\\n\&amp;/m;:a;ta;x;s/^#//;x;tb;G;h;s/\\n(.)/\\1/g;T;s/\\n../\&amp;/;tr'&lt;&lt;&lt;'&amp;'!e
+s/\n..//g
 </code></pre>
-<p><a href="https://tio.run/##RU/JTsMwEL37KxpZchJL8YsTCsRj9QofwA2D1CVKe6BFdQ7Ax2PGRYXLbG@ZmTjukhsp4tk2wwuUxCQ@Ybv@Znl7dz@gvZYQEbLFIEFz5rfAlGJhdBHH3aI5L8o9PZBbM2RCOBpwAH1wmzsNlm3JbTKsERQPg8IbPZHbXlivEpk@b@jxqgL6iavqYlBzrDgx0IVgwcpfa96k2Hz9v6n03peqLEY@ObtMyTEo4f3fX7K1q/xRZWpvdLCV1KY2eoXQsVfqhBW9WH6f3ufD6RhTc/76AQ" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online!</a></p>
-<p>ugh, I'm so sad you didn't post this, like, 10 hours ago. I was making an answer to <a href="https://codegolf.stackexchange.com/a/274071/119818">this question</a> and in the process of building it I had a great solution to this exact problem in like 100 bytes without the dumb recursive sed call but now it's long gone...</p>
-<p>I'll get this one down that way eventually, but it's really frustrating that I can't figure out what I had earlier</p>
+<p><a href="https://tio.run/##PY65DsIwEER7fwWRJQcsxROHM7ZFyw/QYZBARIGCQ3EK4OMJa65mj9nZpwnVvjOVDVjprFxDcNTsDl0MR@PJdFYi/41gATxHyWHb6M@BuguJkkmo9r2s6aUHu7CmoZPy/qxABfZGa9wk6G1rzS6eJbwg0QucrNlGPdo2HNHf7ghz@Lz11YCaRm2XXw5hBZGa1DmXijSpKNVbpjCGPBzO/cPzXM9jbMI4Jb3uc6kGSs7hC2J0BdNsyMbPy7U9Xs6hy5rHCw" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online!</a></p>
+<p>This essentially calls a second instance of sed with a snipit of the script I used for <a href="https://codegolf.stackexchange.com/a/274071/119818">this question</a> to calculate the powers, and then concats everything together at the end.</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s> 29 </s> 26 bytes</h1>
 <p><em>-3 bytes thanks to Albert.Lang.</em></p>
