--- a/q/235366.html
+++ b/q/235366.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>044</td><td>JavaScript Node.js</td><td>240711T234631Z</td><td><a href="https://codegolf.stackexchange.com/questions/235366/is-it-a-row-of-pascals-triangle/274105#274105">l4m2</a></td></tr>
+<tr d-ix="0"><td>043</td><td>JavaScript Node.js</td><td>240711T234631Z</td><td><a href="https://codegolf.stackexchange.com/questions/235366/is-it-a-row-of-pascals-triangle/274105#274105">l4m2</a></td></tr>
 <tr d-ix="1"><td>040</td><td>Octave</td><td>240711T163451Z</td><td><a href="https://codegolf.stackexchange.com/questions/235366/is-it-a-row-of-pascals-triangle/274088#274088">int 21h </a></td></tr>
 <tr d-ix="2"><td>034</td><td>Julia</td><td>220220T163026Z</td><td><a href="https://codegolf.stackexchange.com/questions/235366/is-it-a-row-of-pascals-triangle/243133#243133">David Sc</a></td></tr>
 <tr d-ix="3"><td>131</td><td>Lean</td><td>211005T220522Z</td><td><a href="https://codegolf.stackexchange.com/questions/235366/is-it-a-row-of-pascals-triangle/236062#236062">Wheat Wi</a></td></tr>
@@ -52,7 +52,13 @@
 <tr d-ix="23"><td>047</td><td>Factor + math.combinatorics</td><td>210915T231621Z</td><td><a href="https://codegolf.stackexchange.com/questions/235366/is-it-a-row-of-pascals-triangle/235377#235377">chunes</a></td></tr>
 <tr d-ix="24"><td>006</td><td>Jelly</td><td>210915T200501Z</td><td><a href="https://codegolf.stackexchange.com/questions/235366/is-it-a-row-of-pascals-triangle/235367#235367">caird co</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 44 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 43 bytes</h1>
+
+<pre class="lang-javascript prettyprint-override"><code>a=&gt;a+1==a.map((v,i)=&gt;n*=i?a[1]--/i:1,n=1)+n
+</code></pre>
+<p><a href="https://tio.run/##dZBBDoIwEEX3XgQqA7aVYmJS3HkCd8iiQdAabAkgiafHVjYa28xkkvnzm@a/u5jEUPWyG2OlL/Xc8FnwXESEc5E8RBeGE0jEc7Xm8iAKUsbxRu4JKE5QpOZKq0G3ddLqaxgUp/453l5lgFbfehOaZ@hfAwpufWvKfWFAsG3muWdAGFBsZ@ax7ICaH5htareP68cWnFVxFO3gCkLdQZyqW8eQmsI@INhLhRoqqUmeeZixBcyCbn4D" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p>From Arnauld's</p>
+<h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 44 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>f=a=&gt;(t=a.map(n=&gt;g=n-g,g=0)).pop()?a==1:f(t)
 </code></pre>
