--- a/q/235366.html
+++ b/q/235366.html
@@ -63,7 +63,7 @@
 <pre class="lang-javascript prettyprint-override"><code>f=a=&gt;(t=a.map(n=&gt;g=n-g,g=0)).pop()?a==1:f(t)
 </code></pre>
 <p><a href="https://tio.run/##dZBRC8IgFIXf@yNTuBtqc0HgeusX9Lb2IKtZsVQ2C/r1S9tLkXIPguceuJzvJp9y6sardbk2p/PcCy8pauSELO7SIi1qJXSuQAmCcWGNRXgnhaDbHjk8d0ZPZjgXg1Eoaw7jw11ebYZX336PGtrifw8YxP21n/iGAyVBPLGvgHJgJLxVIrIB5i/wIBZ@n9RPLDvqZi@HKVaExYtE3bhPoPRDUkBIkgrzVErfvEow4wuYBd38Bg" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
-<p>Mine. Doesn't work well if <code>a[0]==0</code> but test case seems to mean no 0 handleing needed</p>
+<p>Mine.</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://www.gnu.org/software/octave/" rel="nofollow noreferrer">Octave</a>, 40 bytes</h1>
 
