--- a/q/274092.html
+++ b/q/274092.html
@@ -26,20 +26,35 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>004</td><td>Uiua</td><td>240711T220003Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274101#274101">noodle p</a></td></tr>
-<tr d-ix="1"><td>026</td><td>JavaScript Node.js</td><td>240712T002141Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274108#274108">l4m2</a></td></tr>
-<tr d-ix="2"><td>007</td><td>Charcoal</td><td>240712T001352Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274107#274107">Neil</a></td></tr>
-<tr d-ix="3"><td>024</td><td>Excel</td><td>240712T000858Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274106#274106">z..</a></td></tr>
-<tr d-ix="4"><td>019</td><td>Arturo</td><td>240711T231748Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274103#274103">chunes</a></td></tr>
-<tr d-ix="5"><td>029</td><td>Google Sheets</td><td>240711T233415Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274104#274104">doubleun</a></td></tr>
-<tr d-ix="6"><td>137</td><td>sed 4.2.2 rz</td><td>240711T223447Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274102#274102">guest430</a></td></tr>
-<tr d-ix="7"><td>026</td><td>Python 3.8 prerelease</td><td>240711T202931Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274098#274098">squarero</a></td></tr>
-<tr d-ix="8"><td>017</td><td>Haskell</td><td>240711T203506Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274099#274099">xnor</a></td></tr>
-<tr d-ix="9"><td>042</td><td>Nibbles</td><td>240711T202550Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274097#274097">Dominic </a></td></tr>
-<tr d-ix="10"><td>007</td><td>APL+WIN</td><td>240711T200539Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274096#274096">Graham</a></td></tr>
-<tr d-ix="11"><td>003</td><td>Jelly</td><td>240711T193202Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274095#274095">Fmbalbue</a></td></tr>
+<tr d-ix="0"><td>006</td><td>J</td><td>240712T014603Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274110#274110">noodle p</a></td></tr>
+<tr d-ix="1"><td>041</td><td>Red</td><td>240712T014531Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274109#274109">chunes</a></td></tr>
+<tr d-ix="2"><td>004</td><td>Uiua</td><td>240711T220003Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274101#274101">noodle p</a></td></tr>
+<tr d-ix="3"><td>026</td><td>JavaScript Node.js</td><td>240712T002141Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274108#274108">l4m2</a></td></tr>
+<tr d-ix="4"><td>007</td><td>Charcoal</td><td>240712T001352Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274107#274107">Neil</a></td></tr>
+<tr d-ix="5"><td>024</td><td>Excel</td><td>240712T000858Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274106#274106">z..</a></td></tr>
+<tr d-ix="6"><td>019</td><td>Arturo</td><td>240711T231748Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274103#274103">chunes</a></td></tr>
+<tr d-ix="7"><td>029</td><td>Google Sheets</td><td>240711T233415Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274104#274104">doubleun</a></td></tr>
+<tr d-ix="8"><td>137</td><td>sed 4.2.2 rz</td><td>240711T223447Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274102#274102">guest430</a></td></tr>
+<tr d-ix="9"><td>026</td><td>Python 3.8 prerelease</td><td>240711T202931Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274098#274098">squarero</a></td></tr>
+<tr d-ix="10"><td>017</td><td>Haskell</td><td>240711T203506Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274099#274099">xnor</a></td></tr>
+<tr d-ix="11"><td>042</td><td>Nibbles</td><td>240711T202550Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274097#274097">Dominic </a></td></tr>
+<tr d-ix="12"><td>007</td><td>APL+WIN</td><td>240711T200539Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274096#274096">Graham</a></td></tr>
+<tr d-ix="13"><td>003</td><td>Jelly</td><td>240711T193202Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274095#274095">Fmbalbue</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Uiua, 4 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.jsoftware.com" rel="nofollow noreferrer">J</a>, 6 bytes</h1>
+<pre><code>+/@:^~
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m70wa8GCpaUlaboWq9MUbK0UtPUdrOLqICJrUpMz8hXSFEwUzBTMIUIwxQA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<pre><code>+/@:    NB. Sum the results of
+    ^~  NB. raise each to the power of itself
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="http://www.red-lang.org" rel="nofollow noreferrer">Red</a>, 41 bytes</h1>
+<pre><code>func[b][x: 0 foreach n b[x: n ** n + x]x]
+</code></pre>
+<p><a href="https://tio.run/##K0pN@R@UmhIdy5VmpfA/rTQvOTopNrrCSsFAIS2/KDUxOUMhTyEJJJCnoKUFJLQVKmIrYv8XFGXmlSikKUSbKJgpmMf@BwA" rel="nofollow noreferrer" title="Red – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu2" class="pu"><h1>Uiua, 4 bytes</h1>
 <pre><code>/+ⁿ.
 </code></pre>
 <p><a href="https://uiua.org/pad?src=0_12_0-dev_1__RiDihpAgLyvigb8uCgpGIDRfNl83Cg==" rel="nofollow noreferrer">Try it</a></p>
@@ -48,13 +63,13 @@
    .  itself
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 26 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 26 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>x=&gt;x.map(t=&gt;n+=t**t,n=0)|n
 </code></pre>
 <p><a href="https://tio.run/##y0osSyxOLsosKNHNy09J/Z9m@7/C1q5CLzexQKPE1i5P27ZES6tEJ8/WQLMm739yfl5xfk6qXk5@ukaaRrSJjpmOeaym5n8A" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 7 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 7 bytes</h1>
 <pre><code>ＩΣＥＡＸιι
 </code></pre>
 <p><a href="https://tio.run/##S85ILErOT8z5/z@gKDOvRMM5sbhEI7g0V8M3sUDDM6@gtERDU0chIL88tUgjU0chUxMErP//j4420VEw01Ewj439r1uWAwA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code.</p>
@@ -69,12 +84,12 @@
 </code></pre>
 <p>Because <code>Power</code> auto-casts to string, if all of the values are single digits then the program can also take input as a string: <a href="https://tio.run/##S85ILErOT8z5/z@gKDOvRMM5sbhEI7g0V8M3sUDDM6@gtERDU0chIL88tUgjU0chUxMErP//NzYxNv2vW5YDAA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu3" class="pu"><h1>Excel, 24 bytes</h1>
+<div id="pu5" class="pu"><h1>Excel, 24 bytes</h1>
 <p>Input in <code>A:A</code> entered in <code>A1</code> as an array (i.e. <code>={4;6;7}</code>)</p>
 <pre class="lang-cpp prettyprint-override"><code>=SUM((A1#^A1#)*(0&lt;&gt;A1#))
 </code></pre>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 19 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 19 bytes</h1>
 <pre><code>$=&gt;[∑map&amp;'x-&gt;x^x]
 </code></pre>
 <p><a href="http://arturo-lang.io/playground?5IZrNg" rel="nofollow noreferrer">Try it!</a></p>
@@ -85,20 +100,20 @@ map&amp;'x-&gt;   ; map over input and assign current elt to x
 x^x        ; x to the x power
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h1>Google Sheets, 29 bytes</h1>
+<div id="pu7" class="pu"><h1>Google Sheets, 29 bytes</h1>
 <pre><code>=sort(sum(if(A:A,A:A^(A:A))))
 </code></pre>
 <p>Uses <code>sort</code> as an array enabler, and <code>if()</code> to weed out blanks. In Google Sheets, the numeric value of a blank is zero, and the self-exponents of a blank column would thus sum up to the number of rows in the column.</p>
 <p><img src="https://i.sstatic.net/i7SbYdj8.png" alt="screenshot" /></p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a> <code>-rz</code>, <s>167</s> 137 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a> <code>-rz</code>, <s>167</s> 137 bytes</h1>
 <pre><code>s!.*!sed -r 'h;G;:r;s/.\\n./\\n/;x;s/\\n.*//;t;:b;s/.*/\&amp;\\n\&amp;/m;:;t;x;s/^#//;x;tb;G;h;s/\\n(.)/\\1/g;T;s/\\n../\&amp;/;tr'&lt;&lt;&lt;'&amp;'!e
 s/\n..//g
 </code></pre>
 <p><a href="https://tio.run/##PY65DsIwEER7fwWRJYdYiicOZ2yLlh@gw1AgokDBoTgF8PGENVezx@zs04R635vaBqx1Xm0gOBp2hy5H48l0Nq9Q/EawAF6g4rBd9BdA04dEySTU@0HeDtKDXVrT0kl5f1agAnujNW4S9GbNLl4lvCDNC5ysITV6thzR3O2Icfj8DFVGTaOxqy@EmIIwbeqcS0Wa1BTpLVMSQx4O5/7JeaEXMTNhnJJeD7lUmZIL@JIYfcnGTLPJ83Ltjpdz6PP28QI" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online!</a></p>
 <p>This essentially calls a second instance of sed with a snipit of the script I used for <a href="https://codegolf.stackexchange.com/a/274071/119818">this question</a> to calculate the powers, and then concats everything together at the end.</p>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s> 29 </s> 26 bytes</h1>
+<div id="pu9" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s> 29 </s> 26 bytes</h1>
 <p><em>-3 bytes thanks to Albert.Lang.</em></p>
 
 <pre class="lang-python prettyprint-override"><code>lambda l:sum(map(pow,l,l))
@@ -111,7 +126,7 @@ s/\n..//g
                      l,l     # element ** element for each element
 </code></pre>
 </div>
-<div id="pu8" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, 17 bytes</h1>
+<div id="pu10" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, 17 bytes</h1>
 
 <pre class="lang-hs prettyprint-override"><code>sum.map((^)&lt;*&gt;id)
 </code></pre>
@@ -122,7 +137,7 @@ s/\n..//g
 </code></pre>
 <p><a href="https://tio.run/##y0gszk7Nyfn/P00hx7a4NDe6Iq6ipsJGNyf2f25iZp6CrUJBUWZeiYKKQppCtImOmY557H8A" rel="nofollow noreferrer" title="Haskell – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu9" class="pu"><h1><a href="http://golfscript.com/nibbles/index.html" rel="nofollow noreferrer">Nibbles</a>, 4 nibbles (2 bytes)</h1>
+<div id="pu11" class="pu"><h1><a href="http://golfscript.com/nibbles/index.html" rel="nofollow noreferrer">Nibbles</a>, 4 nibbles (2 bytes)</h1>
 <pre><code>+.$^
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m708LzMpKSe1eMGCpaUlaboWS7T1VOIgTKjI6milaBMdMx3zWKVYqBAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -136,13 +151,13 @@ s/\n..//g
     $    #   y is each element
 </code></pre>
 </div>
-<div id="pu10" class="pu"><h1>APL+WIN, 7 bytes</h1>
+<div id="pu12" class="pu"><h1>APL+WIN, 7 bytes</h1>
 <p>Prompts for vector of numbers.</p>
 <pre><code>+/i*i←⎕
 </code></pre>
 <p><a href="https://tio.run/##SyzI0U2pTMzJT9dNzkksLs5M/v@ob6qvz6O2CcZcQJanP5BlyPWooz3tv7Z@plYmkAsU/g8U4PqfxmWiYKZgDgA" rel="nofollow noreferrer" title="APL (Dyalog Classic) – Try It Online">Try it online! Thanks to Dyalog Classic</a></p>
 </div>
-<div id="pu11" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 3 bytes</h1>
+<div id="pu13" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 3 bytes</h1>
 <pre><code>*`S
 </code></pre>
 <p><a href="https://tio.run/##y0rNyan8/18rIfj////RJjpmOuaxAA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
